--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
             <button class="btn back-btn">Back to Dashboard</button>
         </section>
         
+        <section id="secrets-section" class="hidden">
+            <h2 class="fade-in">Secret's Dashboard</h2>
+            <div class="photo-frame fade-in">
+                <img src="assets/Snapchat-1481157723.jpg" alt="My Image">
+            </div>
+            <p class="secret-signature">Madam Ji ki Muskaan 🤭</p>
+            <button class="btn back-btn">Back to Main Dashboard</button>
+        </section>
+        
         <section id="games-section" class="hidden">
             <h2 class="fade-in">Choose a Game</h2>
             <button id="game1-btn" class="btn game-btn">Tic-Tac-Toe</button>
