--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
                 <img src="assets/Snapchat-1481157723.jpg" alt="My Image">
             </div>
             <p class="secret-signature">Madam Ji ki Muskaan 🤭</p>
+            <div class="photo-frame fade-in">
+                <img src="assets/Snapchat-2111848756.jpg" alt="Second Image">
+            </div>
+            <p class="secret-signature">itni pyari smile sa ma v melt hogya🥀</p>
+            <div class="photo-frame fade-in">
+                <img src="assets/Snapchat-574192377.jpg" alt="Third Image">
+            </div>
+            <p class="secret-signature">haaye this too precious 💕</p>
             <button class="btn back-btn">Back to Main Dashboard</button>
         </section>
         
@@ -103,4 +111,4 @@
     
     <script src="script.js"></script>
 </body>
-</html>
+                                                                        </html>
