--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <button id="games-btn" class="btn game-btn">Play Games</button>
             <button id="leaderboard-btn" class="btn game-btn">View Leaderboard</button>
             <button id="secrets-btn" class="btn game-btn">Secret's</button>
+            <button id="next-website-btn" class="btn game-btn">Next Website</button>
         </section>
         
         <section id="password-section" class="hidden">
@@ -111,4 +112,4 @@
     
     <script src="script.js"></script>
 </body>
-                                                                        </html>
+    </html>
