--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container fade-in">
         <header>
-            <h1 class="slide-in">Fun Games App</h1>
-            <div id="welcome-note" class="fade-in">Welcome! Enter your name to start.</div>
+            <h1 class="slide-in">Welcome To RutuDev Studio!</h1>
+            <div id="welcome-note" class="fade-in">Enter your name to start.</div>
             <input type="text" id="user-name" placeholder="Enter your name..." class="input-field">
             <button id="save-name" class="btn">Save Name</button>
         </header>
